# battls

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: test.yml
src/: lib.rs  main.rs
src/battery/: mod.rs  model.rs  sysfs.rs
src/formatter/: formatter.rs  mod.rs
src/ui/: render.rs  simple.rs
tests/: ui_test.rs
tests/snapshots/: ui_test__render_battery_snapshot.snap
