[package]
name = "battls"
version = "0.1.0"
edition = "2024"
authors = ["Dante Calderon <dantehemerson@gmail.com>"]
repository = "https://github.com/dantehemerson/battls"
description = "A simple CLI utility that lists your battery information"
keywords = ["battery", "cli", "monitor"]
license = "GPL-3.0"
homepage = "https://github.com/dantehemerson/battls"
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
anyhow = "1.0.100"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
insta = "1.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
